roles/openshift_argo_rollouts/docs/examples/blue-green/bluegreen-demo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen-demo
spec:
  # Rollout resource specification can be found at:
  # https://argo-rollouts.readthedocs.io/en/latest/features/specification/
  replicas: 5
  # The number of old ReplicaSets to retain.
  # Defaults to 10
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: bluegreen-demo
  template:
    metadata:
      labels:
        app: bluegreen-demo
    spec:
      containers:
      - name: bluegreen-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    blueGreen:
      # Indicates if the rollout should automatically promote the new ReplicaSet
      # to the active service or enter a paused state. If not specified, the
      # default value is true.  +optional
      autoPromotionEnabled: false
      # Reference to service that the rollout modifies as the active service.
      # Required.
      activeService: bluegreen-demo-active
      # Name of the service that the rollout modifies as the preview service.
      # +optional
      previewService: bluegreen-demo-preview
      # The number of replicas to run under the preview service before the
      # switchover. Once the rollout is resumed the new ReplicaSet will be fully
      # scaled up before the switch occurs +optional
      previewReplicaCount: 2
      # Add a delay in second before scaling down the preview replicaset
      # if update is aborted. 0 means not to scale down. Default is 30 second
      abortScaleDownDelaySeconds: 30
      # Adds a delay before scaling down the previous ReplicaSet. If omitted,
      # the Rollout waits 30 seconds before scaling down the previous ReplicaSet.
      # A minimum of 30 seconds is recommended to ensure IP table propagation
      # across the nodes in a cluster.
      scaleDownDelaySeconds: 30
