roles/openshift_argo_rollouts/docs/examples/blue-green/bluegreen-demo-preview-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-demo-preview
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: bluegreen-demo
