roles/openshift_argo_rollouts/docs/examples/blue-green/bluegreen-demo-preview-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bluegreen-demo-preview
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: bluegreen-demo-preview
